# swagger-scanner

./: .gitignore  README.md  pyproject.toml
swagger_scanner/: __init__.py  __main__.py  fetcher.py  main.py  md_generator.py  parser.py  ts_generator.py
tests/: test_parser.py
